cluster/apps/networking/adguard-home-2/adguard-home-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-2
  namespace: networking
  labels:
    service: adguard-home-2
spec:
  type: ClusterIP
  selector:
    service: adguard-home-2
  ports:
    - name: admin
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
    - name: dns
      port: 53
      targetPort: 53
      protocol: UDP
